<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/checkin_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/listing_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/listing_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/listing_image"
                android:layout_toRightOf="@id/listing_image"
                android:gravity="start"
                android:scrollHorizontally="false"
                android:textAlignment="viewStart"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="Listing title" />

            <TextView
                android:id="@+id/listing_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/listing_title"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/listing_image"
                android:layout_toRightOf="@id/listing_image"
                android:gravity="start"
                android:scrollHorizontally="false"
                android:textAlignment="viewStart"
                android:textColor="#333333"
                android:textSize="14sp"
                tools:text="Listing address" />
        </RelativeLayout>

        <EditText
            android:id="@+id/checkin_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="start"
            android:hint="@string/checkin_hintext"
            android:maxLines="5"
            android:textAlignment="viewStart" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/share_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:visibility="visible">

        <ImageButton
            android:id="@+id/facbook_share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/fb_logo"
            android:text="@string/share_on_fb" />

        <ImageButton
            android:id="@+id/twitter_share"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/twitter_logo"
            android:text="@string/share_on_twitter" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#cccccc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight=".7">

            <Button
                android:id="@+id/do_checkin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:drawableLeft="@drawable/ic_contribute_check_in_light"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_contribute_check_in_light"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/checkin" />

            <Button
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:drawablePadding="5dp"
                android:paddingLeft="35dp"
                android:paddingRight="35dp"
                android:text="@string/close"
                android:visibility="gone" />
        </FrameLayout>
    </LinearLayout>
</LinearLayout>